# sync_dns-project

./: Makefile  README.md  pyproject.toml
sync_dns/: check_dns_rec.py  cli.py  diff_dns.py  get_dns_rec.py  get_ns.py  parser.py  stylish.py
sync_dns/scripts/: check_dns.py
